compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!WRONG_MODIFIER_TARGET!>annotation<!> enum class E {
    D
}